# cvrptw

./: CMakeLists.txt  README.md  config.h  cvrptw_data_get.c  cvrptw_data_get.h  cvrptw_typedefs.h  data_cooker.sh  ga_cvrptw.c  ga_cvrptw.h  machine.c  machine.h  main.c  solver.c  solver.h  visualizer.c  visualizer.h
raw_data/: c101  c102  r102  r109  r211  rc101  rc102
sol/: c101-25  r109  r211
